nesc-frontend/src/test/resources/integration/programs/good/good15/C.nc
/* Signaling an event from a non-parameterised interface. */

configuration C
{
}
implementation
{
   components M;
}
