nesc-frontend/src/test/resources/integration/programs/bad/bad19/C.nc
/* Calling a command from a non-parameterised interface with invalid number of
   parameters. */

configuration C
{
}
implementation
{
   components M;
}
